--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
         <svg id="barcode"></svg>
 
         <h2>Barcode Scanner</h2>
-        <button onclick="startScanner()">Start Scanning</button>
+        <input type="text" id="scannerInput" placeholder="Tap here to scan barcode">
         <video id="scanner" autoplay></video>
-        <p id="scanResult">Scanned Code: <span></span></p>
     </div>
 
     <script src="JsBarcode.all.min.js"></script>
