--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <video id="scanner" autoplay></video>
     </div>
 
-    <script src="JsBarcode.all.min.js"></script>
-    <script src="quagga.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/quagga/0.12.1/quagga.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jsbarcode@3.11.0/dist/JsBarcode.all.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
